# APC_Project

./: .gitignore  CMakeLists.txt  README.md  parameters.txt  questions.md
Documentation/: report.tex
MATLAB/: Matrices_examples.mat  RandomCreationSpMatrices.m  SpMat_ConvertWithLocations.m  icm_converted.txt  icm_sampling.txt  plot_data_pgH.m  plot_data_pgU.m  plot_data_pgV.m  plot_data_total.m  precision_recall.m  sub_sampling.m  sub_sampling_bin.m  sub_sampling_bin_definitivo.m  sub_sampling_bin_tuning.m  urm_converted.txt  urm_sampling.txt  validation.m
Papers/: Thumbs.db
dataset/Dataset_bin_for_Tuning/: icm_sampling.txt  urm_bin_test.txt  urm_bin_tr.txt  urm_bin_tuning_tr.txt  urm_bin_tuning_val.txt
dataset/Dataset_for_Tuning/: urm_tuning_val.txt
dataset/Dummy_Dataset/: dummy_urm_val.txt
dataset/Matrices/: icm_sampling.txt
dataset/Sampled_Dataset/: icm_sampling.txt  urm_test.txt  urm_tr.txt
dataset/Sampled_Dataset_Backup/: icm_sampling.txt  urm_sampling.txt
include/: amf.h  compute_v.h  lib_brando.h  my_utils.h  pg_h.h  pg_u.h  test_lib.h  testlib_lara.h
main/: main_get_topN.cpp  main_solve.cpp  main_tuning.cpp  main_tuning_with_restart.cpp
src/: amf.cpp  amf.h  compute_v.cpp  lib_brando.cpp  main.cpp  main_tuning.cpp  my_utils.cpp  pg_h.cpp  pg_u.cpp  proj_gradient.cpp  test_lib.cpp  testlib_lara.cpp
tests/: new_test_compute_v.cpp  new_test_pg_h.cpp  run_test.sh  test_armadillo.cpp  test_compute_V.cpp  test_constructor.cpp  test_debugging_functions.cpp  test_get_top_N.cpp  test_import_matrices.cpp  test_import_vector.cpp  test_init_parameters.cpp  test_iterators_on_matrix.cpp  test_matrix_product.cpp  test_obj_function.cpp  test_openmp.cpp  test_parameters.txt  test_pg_h.cpp  test_pg_u.cpp  test_pg_u_2.cpp  test_projected_gradient.cpp  test_validation.cpp
